# crab-paperwork

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  SEMMAP.md  neti.toml
.ishoo/: project.ishoo  project.ishoo.bak
.semmap/: edges.json  files.json  project.json  quality.json  style.json  subsystems.json  symbols.json
assets/: github_markdown_dark.css  github_markdown_light.css  main.css
docs/: ARCHITECTURE.md  PACKAGING.md  PHASES.md
docs/ai-agent-resources/: dabible.md  oathy.md
src/: app.rs  export.rs  lib.rs  main.rs  markdown.rs  platform.rs  pretext.rs  storage.rs  ui.rs
src/app/: actions.rs  defaults.rs  state.rs
src/export/: html.rs  pdf.rs
src/markdown/: render.rs  sanitize.rs
src/platform/: clipboard.rs  dialogs.rs  files.rs
src/storage/: config.rs  paths.rs  session.rs
src/ui/: editor.rs  preview.rs  split.rs  status.rs  toolbar.rs
tests/: markdown_render.rs  pretext_layout.rs  storage.rs
